[package]
name = "xraylib-src"
version = "1.0.0"
authors = ["Tom Schoonjans <Tom.Schoonjans@me.com>"]
license = "BSD"
# readme = "README.md"
repository = "https://github.com/tschoonj/xraylib-rust"
description = """
xraylib source code, ready for vendoring into Rust bindings
"""
edition = '2021'

[dependencies]
cc = "1.0"