
[package]
name = "xraylib-sys"
version = "1.0.0"
authors = ["Tom Schoonjans <Tom.Schoonjans@me.com>"]
license = "BSD"
# readme = "README.md"
repository = "https://github.com/tschoonj/xraylib-rust"
description = """
xraylib bindgen generated bindings
"""
edition = '2021'
links = "xrl"

[features]
vendored = ['xraylib-src']

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0"
xraylib-src = { version = "1.0.0", optional = true, path = "../xraylib-src" }
pkg-config = "0.3.9"