[package]
name = "xraylib"
version = "1.0.0"
authors = ["Tom Schoonjans <Tom.Schoonjans@me.com>"]
license = "BSD"
# readme = "README.md"
repository = "https://github.com/tschoonj/xraylib-rust"
description = """
xraylib bindings
"""
edition = '2021'

[features]
default = ["vendored"]
vendored = ["ffi/vendored"]

[dependencies]
ffi = { package = "xraylib-sys", version = "1.0.0", path = "../xraylib-sys" }

